# auto-renfe

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/entities/: user.rs
src/entities/station/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: user_repository.rs
src/infrastructure/scraper/: constants.rs  mod.rs  utils.rs
src/scraper/: constants.rs  mod.rs  utils.rs
src/telegram_bot/: mod.rs
src/telegram_bot/dialogues/: mod.rs  purchase.rs
src/telegram_bot/dialogues/account/: login.rs
src/telegram_bot/menus/: mod.rs
