[package]
name = "auto-renfe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telegram_bot"

[[bin]]
name = "scraper"

[dependencies]
derive_builder = "0.12.0"
dotenv_codegen = "0.15.0"
dptree = "0.3.0"
fantoccini = "0.19.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde_json = "1.0.107"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
