[package]
name = "auto-renfe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telegram_bot"

[[bin]]
name = "scraper"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
derive_builder = "0.12.0"
dotenvy = "0.15.7"
dptree = "0.3.0"
fantoccini = "0.19.3"
futures = "0.3.28"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_prefix = "0.1.0"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
